my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ESYNTAX_14/ESYNTAX_14.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ESYNTAX_14.dml:13:5: error ESYNTAX: syntax error at 'b'Intel\xc2\xae X...'
